--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -56,10 +56,16 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Get current version for Docker tag
+      id: docker_version
+      run: |
+        CURRENT_VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+        echo "version_tag=${CURRENT_VERSION}" >> $GITHUB_OUTPUT
+
     - name: Extract metadata
       id: meta
       run: |
-        echo "tags=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_OUTPUT
+        echo "tags=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.docker_version.outputs.version_tag }}" >> $GITHUB_OUTPUT
         echo "labels=org.opencontainers.image.title=Wealthfolio MCP Server" >> $GITHUB_OUTPUT
         echo "labels=org.opencontainers.image.description=A Model Context Protocol server for Wealthfolio integration" >> $GITHUB_OUTPUT
 
@@ -85,6 +91,33 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Analyze Conventional Commits
+      id: commits
+      run: |
+        # Get all commits since last tag
+        LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+        
+        if [ -z "$LAST_TAG" ]; then
+          COMMITS=$(git log --pretty=%B)
+        else
+          COMMITS=$(git log $LAST_TAG..HEAD --pretty=%B)
+        fi
+        
+        # Determine version bump type based on conventional commits
+        HAS_BREAKING=false
+        HAS_FEATURE=false
+        
+        if echo "$COMMITS" | grep -q "^BREAKING CHANGE:"; then
+          HAS_BREAKING=true
+        fi
+        
+        if echo "$COMMITS" | grep -q "^feat"; then
+          HAS_FEATURE=true
+        fi
+        
+        echo "has_breaking=${HAS_BREAKING}" >> $GITHUB_OUTPUT
+        echo "has_feature=${HAS_FEATURE}" >> $GITHUB_OUTPUT
+
     - name: Get current version
       id: version
       run: |
@@ -95,9 +128,17 @@ jobs:
         # Parse version components
         IFS='.' read -r MAJOR MINOR PATCH <<< "$CURRENT_VERSION"
 
-        # Increment patch version for new release
-        NEW_PATCH=$((PATCH + 1))
-        NEW_VERSION="${MAJOR}.${MINOR}.${NEW_PATCH}"
+        # Increment version based on Conventional Commits
+        if [ "${{ steps.commits.outputs.has_breaking }}" = "true" ]; then
+          NEW_MAJOR=$((MAJOR + 1))
+          NEW_VERSION="${NEW_MAJOR}.0.0"
+        elif [ "${{ steps.commits.outputs.has_feature }}" = "true" ]; then
+          NEW_MINOR=$((MINOR + 1))
+          NEW_VERSION="${MAJOR}.${NEW_MINOR}.0"
+        else
+          NEW_PATCH=$((PATCH + 1))
+          NEW_VERSION="${MAJOR}.${MINOR}.${NEW_PATCH}"
+        fi
 
         echo "current_version=${CURRENT_VERSION}" >> $GITHUB_OUTPUT
         echo "new_version=${NEW_VERSION}" >> $GITHUB_OUTPUT
@@ -117,7 +158,7 @@ jobs:
 
           ### Docker Image
           ```bash
-          docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.new_version_tag }}
           ```
 
           ### Features
