--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -37,50 +37,9 @@ jobs:
         flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 src/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-  build-and-push:
-    runs-on: ubuntu-latest
-    needs: test
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Log in to Container Registry
-      if: github.event_name != 'pull_request'
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Get current version for Docker tag
-      id: docker_version
-      run: |
-        CURRENT_VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
-        echo "version_tag=${CURRENT_VERSION}" >> $GITHUB_OUTPUT
-
-    - name: Extract metadata
-      id: meta
-      run: |
-        echo "tags=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.docker_version.outputs.version_tag }}" >> $GITHUB_OUTPUT
-        echo "labels=org.opencontainers.image.title=Wealthfolio MCP Server" >> $GITHUB_OUTPUT
-        echo "labels=org.opencontainers.image.description=A Model Context Protocol server for Wealthfolio integration" >> $GITHUB_OUTPUT
-
-    - name: Build and push Docker image
-      if: github.event_name != 'pull_request'
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-
   release:
     runs-on: ubuntu-latest
-    needs: build-and-push
+    needs: test
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     permissions:
       contents: write
@@ -144,6 +103,13 @@ jobs:
         echo "new_version=${NEW_VERSION}" >> $GITHUB_OUTPUT
         echo "new_version_tag=v${NEW_VERSION}" >> $GITHUB_OUTPUT
 
+    - name: Create git tag
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git tag ${{ steps.version.outputs.new_version_tag }}
+        git push origin ${{ steps.version.outputs.new_version_tag }}
+
     - name: Create release
       uses: actions/create-release@v1
       env:
@@ -172,9 +138,44 @@ jobs:
         draft: false
         prerelease: false
 
-    - name: Create git tag
+  build-and-push:
+    runs-on: ubuntu-latest
+    needs: release
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Log in to Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Get current version for Docker tag
+      id: docker_version
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git tag ${{ steps.version.outputs.new_version_tag }}
-        git push origin ${{ steps.version.outputs.new_version_tag }}
+        CURRENT_VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+        echo "version_tag=${CURRENT_VERSION}" >> $GITHUB_OUTPUT
+
+    - name: Extract metadata
+      id: meta
+      run: |
+        echo "tags=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.docker_version.outputs.version_tag }}" >> $GITHUB_OUTPUT
+        echo "labels=org.opencontainers.image.title=Wealthfolio MCP Server" >> $GITHUB_OUTPUT
+        echo "labels=org.opencontainers.image.description=A Model Context Protocol server for Wealthfolio integration" >> $GITHUB_OUTPUT
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
